WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182394
REGRESSION (
r219342
): Scaled HTML widget is not responding to a clicks outside the body
https://bugs.webkit.org/show_bug.cgi?id=182394
Summary
REGRESSION (r219342): Scaled HTML widget is not responding to a clicks outsid...
Dean Jackson
Reported
2018-02-01 10:37:19 PST
REGRESSION (
r219342
): Scaled HTML widget is not responding to a clicks outside the body
Attachments
Patch
(6.54 KB, patch)
2018-02-01 10:43 PST
,
Dean Jackson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2018-02-01 10:37:41 PST
<
rdar://problem/34840816
>
Dean Jackson
Comment 2
2018-02-01 10:43:59 PST
Created
attachment 332890
[details]
Patch
Dean Jackson
Comment 3
2018-02-01 11:00:12 PST
Committed
r227974
: <
https://trac.webkit.org/changeset/227974
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug